--- a/Aufgabe1/.project
+++ b/Aufgabe1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Blatt06</name>
+	<name>Aufgabe1</name>
 	<comment></comment>
 	<projects>
 	</projects>
