--- a/IteratorÜbung/.project
+++ b/IteratorÜbung/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Aufgabe2</name>
+	<name>IteratorÜbung</name>
 	<comment></comment>
 	<projects>
 	</projects>
